@@ -4002,7 +4002,7 @@ end
 #Tk.freeze
 
 module Tk
-  RELEASE_DATE = '2005-03-02'.freeze
+  RELEASE_DATE = '2005-03-05'.freeze
 
   autoload :AUTO_PATH,        'tk/variable'
   autoload :TCL_PACKAGE_PATH, 'tk/variable'
