@@ -15,16 +15,11 @@ end
 class Tk::Tile::TButton < TkButton
   include Tk::Tile::TileWidget
 
-  TkCommandNames = ['tbutton'.freeze].freeze
+  if Tk::Tile::USE_TTK_NAMESPACE
+    TkCommandNames = ['::ttk::button'.freeze].freeze
+  else
+    TkCommandNames = ['::tbutton'.freeze].freeze
+  end
   WidgetClassName = 'TButton'.freeze
   WidgetClassNames[WidgetClassName] = self
-
-  def create_self(keys)
-    if keys and keys != None
-      tk_call_without_enc('tbutton', @path, *hash_kv(keys, true))
-    else
-      tk_call_without_enc('tbutton', @path)
-    end
-  end
-  private :create_self
 end
