@@ -1,5 +1,5 @@
 #
-#  tlabel widget
+#  tscrollbar widget
 #                               by Hidetoshi NAGAI (nagai@ai.kyutech.ac.jp)
 #
 require 'tk'
@@ -7,19 +7,19 @@ require 'tkextlib/tile.rb'
 
 module Tk
   module Tile
-    class TLabel < TkLabel
+    class TScrollbar < TkScrollbar
     end
   end
 end
 
-class Tk::Tile::TLabel < TkLabel
+class Tk::Tile::TScrollbar < TkScrollbar
   include Tk::Tile::TileWidget
 
   if Tk::Tile::USE_TTK_NAMESPACE
-    TkCommandNames = ['::ttk::label'.freeze].freeze
+    TkCommandNames = ['::ttk::scrollbar'.freeze].freeze
   else
-    TkCommandNames = ['::tlabel'.freeze].freeze
+    TkCommandNames = ['::tscrollbar'.freeze].freeze
   end
-  WidgetClassName = 'TLabel'.freeze
+  WidgetClassName = 'TScrollbar'.freeze
   WidgetClassNames[WidgetClassName] = self
 end
